--- a/TypeLitePlus.Core/TypeLitePlus.Core.csproj
+++ b/TypeLitePlus.Core/TypeLitePlus.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>2.0.0</Version>
     <Authors>Lukas Kabrt, Robert McLaws, and contributors.</Authors>
     <Description>Generates TypeScript classes or interfaces from .Net Standard 2.0 classes. This package contains only binaries without T4 templates.</Description>
