--- a/TypeLitePlus.DotNetScript/TypeLitePlus.DotNetScript.csproj
+++ b/TypeLitePlus.DotNetScript/TypeLitePlus.DotNetScript.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>net5.0</TargetFramework>
     <Authors>Lukas Kabrt, Robert McLaws, and contributors.</Authors>
     <Version>2.0.0</Version>
     <Description>Generates TypeScript classes or interfaces from .Net Standard 2.0 classes. This package uses the DotNet.Script toolchain to run .csx files to generate your TypeScript classes in .NET Core apps.</Description>
