--- a/TypeLitePlus.T4/TypeLitePlus.T4.csproj
+++ b/TypeLitePlus.T4/TypeLitePlus.T4.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFramework>net5.0</TargetFramework>
     <Authors>Lukas Kabrt, Robert McLaws, and contributors.</Authors>
     <Version>2.0.0</Version>
     <Description>Generates TypeScript classes or interfaces from .Net Standard 2.0 classes. This package uses the T4 toolchain to run .tt files to generate your TypeScript classes in .NET Standard apps.</Description>
