--- a/TypeLitePlus/TypeLitePlus.csproj
+++ b/TypeLitePlus/TypeLitePlus.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFramework>net5.0</TargetFramework>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <Version>2.0.0</Version>
     <Authors>Lukas Kabrt, Robert McLaws, and contributors.</Authors>
